# nusiss_capstone_integration

./: .aider.conf.yml  .env.example  .gitattributes  .gitignore  .gitignore.bak.2025-10-11-150758  .pre-commit-config.yaml  0a_merge_json.py  0b_fix_json.py  1_generate_bio_ner_training.py  1a.before.tex  1b.after.tex  2_ingest_vector.py  2_ingest_vector_wsl.py  3_search_api_rich.py  AIDER_CONTEXT_AGENTB.md  Dockerfile  Makefile  PROMPT_AGENT_B.md  PROMPT_ITERATION.md  Paste-Ready Mega-Prompt for 13-Oct.txt  README.md  Raw_Crawled_Fixed.json  checkpoint.json  conftest.py  docker-compose.yml  eval_external  how_to_run.txt  hybrid_ner_pipeline.py  ingest_wrapper.py  lands.csv  latest_recommendations.txt  ner_vector_output.csv  one.jsonl  original_combined.json  podman-compose.yml  prompts_capstone.txt  pyproject.toml  pytest.ini  requirements.txt  search_api_rich.py  (+1 more)
.aider.tags.cache.v4/: cache.db
.qdrant/: raft_state.json
agent_b/: requirements.txt
api/: 3_search_api.py  Dockerfile  qdrant_client.py  requirements.txt  search_api_rich.py
app/: embeddings.py  indexer.py  indexer.py.bak2  indexer.py.bak_ingest  qdrant_setup.py  qdrant_utils.py
capstone_agent_a/: .dockerignore  .env.example  DOCKER_ARCHITECTURE.md  DOCKER_QUICK_START.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.mcp  Dockerfile.processor  Makefile  README.md  TESTING.md  docker-compose.yml  out.tt  pyproject.toml
capstone_agent_a/app/: __init__.py  cli.py  config.py  dedup.py  graph.py  logging_conf.py  mcp_client.py  memory.py  state.py  tool_proxy.py
capstone_agent_a/app/mcp_server/: __init__.py  client.py  schemas.py  server.py  transport_stdio.py  transport_tcp.py
capstone_agent_a/app/orchestrator/: __init__.py  agent_repository.py
capstone_agent_a/app/orchestrator/agents/: __init__.py  agentic_orchestrator.py  base_agent.py  cve_agent.py  cyber_agent.py  detect_type_agent.py  entity_agent.py  fetch_agent.py  geo_motivation_agent.py  guardrails_helper.py  ioc_agent.py  mitre_agent.py  parse_agents.py  store_agent.py  summarize_agent.py  text_processor.py  validator_agent.py
capstone_agent_a/app/tools/: __init__.py  cve.py  detect_kind.py  http_fetch.py  ioc.py  ip_classifier.py  nlp.py  pdf_extract.py  schema_validate.py  store_emit.py
capstone_agent_a/app/tools/parsers/: __init__.py  html_to_markdown.py  json_normalize.py  misp_parse.py  pdf_to_text.py  rss_parse.py  stix_parse.py
capstone_agent_a/data/: cti.db  kev_cache.json
capstone_aws_data/: sync_capstone_aws_webscrap.ps1
capstone_report/: CyberSage.bib  README.md  agentA_ingest.tex  agentB_ner.tex  (+9 more)
(+51 files in other folders)
